start notebook for evaluating genre on wiktor: read dataset, run model, coordinates API, haversine dist

--- a/examples_genre/examples.ipynb
+++ b/examples_genre/examples.ipynb
@@ -79,8 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-05T08:33:01.329650Z",
+     "start_time": "2024-03-05T08:33:01.327162Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# OPTIONAL:\n",
@@ -90,8 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-05T08:34:02.246741Z",
+     "start_time": "2024-03-05T08:33:01.685217Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -111,17 +121,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-05T08:34:08.080480Z",
+     "start_time": "2024-03-05T08:34:02.247783Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/thomas/miniconda3/envs/geonlp/lib/python3.9/site-packages/transformers/utils/generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  _torch_pytree._register_pytree_node(\n",
+      "/home/thomas/miniconda3/envs/geonlp/lib/python3.9/site-packages/transformers/utils/generic.py:309: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    }
+   ],
    "source": [
     "# for pytorch/fairseq\n",
-    "from genre.fairseq_model import GENRE\n",
-    "model = GENRE.from_pretrained(\"../models/fairseq_entity_disambiguation_aidayago\").eval()\n",
+    "# from genre.fairseq_model import GENRE\n",
+    "# model = GENRE.from_pretrained(\"../models/fairseq_entity_disambiguation_aidayago\").eval()\n",
     "\n",
     "# for huggingface/transformers\n",
-    "# from genre.hf_model import GENRE\n",
-    "# model = GENRE.from_pretrained(\"../models/hf_entity_disambiguation_aidayago\").eval()"
+    "from genre.hf_model import GENRE\n",
+    "model = GENRE.from_pretrained(\"../models/hf_entity_disambiguation_aidayago\").eval()"
    ]
   },
   {
@@ -133,20 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-05T08:34:08.391887Z",
+     "start_time": "2024-03-05T08:34:08.081743Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[[{'text': 'Germany', 'score': tensor(-0.1856)},\n",
-       "  {'text': 'Germans', 'score': tensor(-0.5461)},\n",
-       "  {'text': 'German Empire', 'score': tensor(-2.1858)},\n",
-       "  {'text': 'Nazi Germany', 'score': tensor(-2.4682)},\n",
-       "  {'text': 'France', 'score': tensor(-4.2070)}]]"
-      ]
+      "text/plain": "[[{'text': 'Germany', 'score': tensor(-0.1856)},\n  {'text': 'German Empire', 'score': tensor(-2.1858)},\n  {'text': 'Nazi Germany', 'score': tensor(-2.4682)},\n  {'text': 'German language', 'score': tensor(-3.2784)},\n  {'text': 'France', 'score': tensor(-4.2070)}]]"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,6 +184,35 @@
     "    prefix_allowed_tokens_fn=lambda batch_id, sent: trie.get(sent.tolist()),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[[{'text': 'Victoria, Chile', 'score': tensor(-2.8870)},\n  {'text': 'Victoria, Yoro', 'score': tensor(-3.7110)},\n  {'text': 'Victor, Indiana', 'score': tensor(-4.2915)},\n  {'text': 'Port Victoria, South Australia', 'score': tensor(-4.6513)},\n  {'text': 'Victor, South Dakota', 'score': tensor(-4.9616)}]]"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences = [\"[START_ENT] Victoria [END_ENT] (sometimes called Port Victoria) is the capital city of the Seychelles and is situated on the north-eastern side of Mahé island, the archipelago's main island. The city was first established as the seat of the British colonial government. In 2010, the population of Greater Victoria (including the suburbs) was 26,450 out of the country's total population of 90,945. The principal exports of Victoria are vanilla, coconuts, coconut oil, fish and guano. Attractions in the city include a clocktower modelled on that of Vauxhall Clock Tower in London, England, the Courthouse, the Victoria Botanical Gardens, the Victoria National Museum of History, the Victoria Natural History Museum and the Sir Selwyn Selwyn-Clarke Market. Victoria Market is the local hotspot for the Seychellois people and the brightly coloured Fish and Fruit Markets are not to be missed. Also nearby is the gallery of the renowned local artist Georges Camille. The city is home to the national stadium, the International School Seychelles and a polytechnic. Victoria is served by Seychelles International Airport, completed in 1971. The inner harbour lies immediately east of the town, where tuna fishing and canning forms a major local industry. One of the largest bridges in Victoria was destroyed by tsunami waves from the 2004 Indian Ocean earthquake.\"]\n",
+    "\n",
+    "model.sample(\n",
+    "    sentences,\n",
+    "    prefix_allowed_tokens_fn=lambda batch_id, sent: trie.get(sent.tolist()),\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-05T08:34:21.867934Z",
+     "start_time": "2024-03-05T08:34:20.873038Z"
+    }
+   },
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
