continue code for evaluating genre on wiktor

--- a/my_notebooks/1-evaluate_on_wiktor.ipynb
+++ b/my_notebooks/1-evaluate_on_wiktor.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-05T08:34:44.500369Z",
-     "start_time": "2024-03-05T08:34:44.295828Z"
+     "end_time": "2024-03-06T04:18:01.828955Z",
+     "start_time": "2024-03-06T04:18:01.633040Z"
     }
    },
    "outputs": [],
@@ -69,8 +69,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T08:34:45.445798Z",
-     "start_time": "2024-03-05T08:34:45.439359Z"
+     "end_time": "2024-03-06T04:18:02.097097Z",
+     "start_time": "2024-03-06T04:18:02.091334Z"
     }
    },
    "id": "2c4468e5d16d7fed",
@@ -105,12 +105,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T08:35:31.477145Z",
-     "start_time": "2024-03-05T08:34:53.479168Z"
+     "end_time": "2024-03-06T04:18:20.848331Z",
+     "start_time": "2024-03-06T04:18:02.545981Z"
     }
    },
    "id": "c4a89df2c6eb82b8",
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -139,9 +139,10 @@
     "        for k, v in PAGES.items():\n",
     "            coordinates = v.get('coordinates')\n",
     "            if coordinates:\n",
-    "                lat = round(float(coordinates[0]['lat']), 4)\n",
-    "                lon = round(float(coordinates[0]['lon']), 4)\n",
+    "                lat = coordinates[0]['lat']\n",
+    "                lon = coordinates[0]['lon']\n",
     "                return lat, lon\n",
+    "        print(f\"Coordinates not found for {place_name}\")\n",
     "        return 0, 0\n",
     "    except Exception as e:\n",
     "        print(\"An error occurred:\", e)\n",
@@ -150,12 +151,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T09:03:34.099443Z",
-     "start_time": "2024-03-05T09:03:34.095915Z"
+     "end_time": "2024-03-06T04:18:20.853538Z",
+     "start_time": "2024-03-06T04:18:20.849839Z"
     }
    },
    "id": "4665ffbbfab0ecaf",
-   "execution_count": 21
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -185,45 +186,71 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T09:03:34.341096Z",
-     "start_time": "2024-03-05T09:03:34.336892Z"
+     "end_time": "2024-03-06T04:18:20.858313Z",
+     "start_time": "2024-03-06T04:18:20.854433Z"
     }
    },
    "id": "755a7d45d7ac6666",
-   "execution_count": 22
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "max_error = 20039"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-06T04:49:39.560698Z",
+     "start_time": "2024-03-06T04:49:39.558356Z"
+    }
+   },
+   "id": "6e5e29334381f535",
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "res_distances = []"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-06T04:49:40.466775Z",
+     "start_time": "2024-03-06T04:49:40.464222Z"
+    }
+   },
+   "id": "8cdf1b87b9b02e8b",
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Victoria, Seychelles\n",
-      "\tIncorrect. Got: Victoria, Chile\n",
-      "\t12838.35504879085\n",
-      "\tIncorrect. Got: Port Victoria\n",
-      "\t6180.510501800203\n",
-      "\tIncorrect. Got: Port Victoria\n",
-      "\t6180.510501800203\n",
-      "\tCorrect\n",
-      "\t0.21779862287022636\n",
-      "Victoria, Gozo\n",
-      "\tCorrect\n",
-      "\t4269.793132696058\n",
-      "\tCorrect\n",
-      "\t4269.793132696058\n",
-      "\tCorrect\n",
-      "\t4269.793132696058\n"
+     "ename": "NameError",
+     "evalue": "name 'pages_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Iterate over the modified list of dictionaries\u001B[39;00m\n\u001B[1;32m      2\u001B[0m iter_count \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m page_dict \u001B[38;5;129;01min\u001B[39;00m \u001B[43mpages_list\u001B[49m:\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;28mprint\u001B[39m(page_dict[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpageTitle\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m      5\u001B[0m     text \u001B[38;5;241m=\u001B[39m page_dict[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtext\u001B[39m\u001B[38;5;124m'\u001B[39m]\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'pages_list' is not defined"
      ]
     }
    ],
    "source": [
     "# Iterate over the modified list of dictionaries\n",
-    "for page_dict in pages_list[11:13]:\n",
+    "iter_count = 0\n",
+    "for page_dict in pages_list:\n",
     "    print(page_dict['pageTitle'])\n",
     "    text = page_dict['text']\n",
     "    for index_pair in page_dict['toponymIndices']:\n",
+    "        iter_count+=1\n",
+    "        if iter_count <= len(res_distances):\n",
+    "            continue\n",
+    "\n",
     "        start_index = index_pair['start']\n",
     "        end_index = index_pair['end']\n",
     "        modified_text = text[:start_index] + \" [START_ENT] \" + text[start_index:end_index] + \" [END_ENT] \" + text[\n",
@@ -238,57 +265,141 @@
     "        # print(\"\\n\")\n",
     "\n",
     "        if res[0][0][\"text\"] == page_dict['pageTitle']:\n",
-    "            print(\"\\tCorrect\")\n",
+    "            # print(\"\\tCorrect\")\n",
+    "            dist = 0.0\n",
     "        else:\n",
     "            print(f\"\\tIncorrect. Got: {res[0][0]['text']}\")\n",
-    "        \n",
-    "        lat, lon = get_coordinates(res[0][0][\"text\"])\n",
-    "        haversine_dist = haversine_distance(float(page_dict['lat']), float(page_dict['lon']), lat, lon)\n",
-    "        print(\"\\t\"+str(haversine_dist))"
+    "            lat, lon = get_coordinates(res[0][0][\"text\"])\n",
+    "            if lat == 0 and lon == 0:  # use max_error if predicted entity is not a place\n",
+    "                dist = max_error\n",
+    "            else:\n",
+    "                dist = haversine_distance(round(float(page_dict['lat']), 2), round(float(page_dict['lon']), 2),\n",
+    "                                          round(lat, 2), round(lon, 2))\n",
+    "\n",
+    "        res_distances.append(dist)\n",
+    "\n",
+    "        # print(\"\\t\" + str(dist))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T09:04:32.106186Z",
-     "start_time": "2024-03-05T09:04:21.083934Z"
+     "end_time": "2024-03-06T06:09:20.688608Z",
+     "start_time": "2024-03-06T06:09:20.450210Z"
     }
    },
    "id": "2920dc0cd1692de2",
-   "execution_count": 25
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(-38.2333, -72.3333)"
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_coordinates(\"Victoria, Chile\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-05T09:06:02.558805Z",
-     "start_time": "2024-03-05T09:06:01.937005Z"
-    }
-   },
-   "id": "2fe394997849e38b",
-   "execution_count": 27
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"../data/wiktor_distances.pkl\", 'wb') as f:\n",
+    "        pickle.dump(res_distances, f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-06T05:58:01.390926Z",
+     "start_time": "2024-03-06T05:58:01.387800Z"
+    }
+   },
+   "id": "2c92bdbfc6222daa",
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def compute_accuracy_at_161km(distances):\n",
+    "    \"\"\"\n",
+    "    Compute Accuracy@161km from a list of distances.\n",
+    "    \"\"\"\n",
+    "    count_within_threshold = sum(1 for distance in distances if distance <= 161)\n",
+    "    accuracy = count_within_threshold / len(distances)\n",
+    "    return accuracy"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "26bfa9a06f95b357"
+   "id": "ac51124701e58ede"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def compute_mean_error(distances):\n",
+    "    \"\"\"\n",
+    "    Compute the mean error from a list of distances.\n",
+    "    \"\"\"\n",
+    "    mean_error = sum(distances) / len(distances)\n",
+    "\n",
+    "    return mean_error"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f95c8ac154ba9db"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from numpy import trapz\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def compute_auc(distances):\n",
+    "    \"\"\"\n",
+    "    Compute the Area Under the Curve (AUC) given list of distance.\n",
+    "    \"\"\"\n",
+    "    distances.sort()\n",
+    "    dim_error = [(np.log(x + 1) / np.log(max_error)) for x in distances]\n",
+    "    y = np.array(dim_error)\n",
+    "\n",
+    "    # Compute the area using the composite trapezoidal rule.\n",
+    "    area = trapz(y) / len(distances)\n",
+    "    return area"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5a14df9ba4f5d386"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "compute_accuracy_at_161km(res_distances)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "aaf3e88f5c090451"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "compute_mean_error(res_distances)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "821ffe0273003f72"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "compute_auc(res_distances)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1d5db683b3af7e53"
   }
  ],
  "metadata": {
