finish evaluating genre on wiktor

--- a/examples_genre/examples.ipynb
+++ b/examples_genre/examples.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-05T08:33:01.329650Z",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-05T08:34:02.246741Z",
@@ -169,7 +169,13 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[[{'text': 'Germany', 'score': tensor(-0.1856)},\n  {'text': 'German Empire', 'score': tensor(-2.1858)},\n  {'text': 'Nazi Germany', 'score': tensor(-2.4682)},\n  {'text': 'German language', 'score': tensor(-3.2784)},\n  {'text': 'France', 'score': tensor(-4.2070)}]]"
+      "text/plain": [
+       "[[{'text': 'Germany', 'score': tensor(-0.1856)},\n",
+       "  {'text': 'German Empire', 'score': tensor(-2.1858)},\n",
+       "  {'text': 'Nazi Germany', 'score': tensor(-2.4682)},\n",
+       "  {'text': 'German language', 'score': tensor(-3.2784)},\n",
+       "  {'text': 'France', 'score': tensor(-4.2070)}]]"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -187,10 +193,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-05T08:34:21.867934Z",
+     "start_time": "2024-03-05T08:34:20.873038Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "[[{'text': 'Victoria, Chile', 'score': tensor(-2.8870)},\n  {'text': 'Victoria, Yoro', 'score': tensor(-3.7110)},\n  {'text': 'Victor, Indiana', 'score': tensor(-4.2915)},\n  {'text': 'Port Victoria, South Australia', 'score': tensor(-4.6513)},\n  {'text': 'Victor, South Dakota', 'score': tensor(-4.9616)}]]"
+      "text/plain": [
+       "[[{'text': 'Victoria, Chile', 'score': tensor(-2.8870)},\n",
+       "  {'text': 'Victoria, Yoro', 'score': tensor(-3.7110)},\n",
+       "  {'text': 'Victor, Indiana', 'score': tensor(-4.2915)},\n",
+       "  {'text': 'Port Victoria, South Australia', 'score': tensor(-4.6513)},\n",
+       "  {'text': 'Victor, South Dakota', 'score': tensor(-4.9616)}]]"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -204,15 +227,7 @@
     "    sentences,\n",
     "    prefix_allowed_tokens_fn=lambda batch_id, sent: trie.get(sent.tolist()),\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-05T08:34:21.867934Z",
-     "start_time": "2024-03-05T08:34:20.873038Z"
-    }
-   },
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "markdown",
@@ -768,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
