--- a/my_notebooks/1-evaluate_on_wiktor.ipynb
+++ b/my_notebooks/1-evaluate_on_wiktor.ipynb
@@ -3,12 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7ac52d63-0a24-4d6e-8f28-52aea1684f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-07T06:03:46.122101Z",
-     "start_time": "2024-03-07T06:03:45.907318Z"
+     "end_time": "2024-03-08T02:28:28.135140Z",
+     "start_time": "2024-03-08T02:28:27.784790Z"
     }
    },
    "outputs": [],
@@ -53,31 +63,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "2c4468e5d16d7fed",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-08T02:28:28.142326Z",
+     "start_time": "2024-03-08T02:28:28.136877Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "5000"
+      "text/plain": [
+       "5000"
+      ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(pages_list)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:03:46.127561Z",
-     "start_time": "2024-03-07T06:03:46.123178Z"
-    }
-   },
-   "id": "2c4468e5d16d7fed",
-   "execution_count": 2
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "c4a89df2c6eb82b8",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-03-08T02:28:28.143422Z"
+    },
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -101,19 +128,19 @@
     "from genre.hf_model import GENRE\n",
     "\n",
     "model = GENRE.from_pretrained(\"../models/hf_entity_disambiguation_aidayago\").eval()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.002688Z",
-     "start_time": "2024-03-07T06:03:46.128498Z"
-    }
-   },
-   "id": "c4a89df2c6eb82b8",
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "4665ffbbfab0ecaf",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -147,19 +174,19 @@
     "    # except Exception as e:\n",
     "    #     print(\"An error occurred:\", e)\n",
     "    #     return 0, 0"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.008905Z",
-     "start_time": "2024-03-07T06:04:10.004529Z"
-    }
-   },
-   "id": "4665ffbbfab0ecaf",
-   "execution_count": 4
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "755a7d45d7ac6666",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from math import radians, sin, cos, sqrt, atan2\n",
@@ -182,19 +209,19 @@
     "    distance = radius_of_earth * c\n",
     "\n",
     "    return distance"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.014045Z",
-     "start_time": "2024-03-07T06:04:10.009656Z"
-    }
-   },
-   "id": "755a7d45d7ac6666",
-   "execution_count": 5
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "2228d892feca9b9",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "def shorten_sentences(string, start_pos, end_pos):\n",
@@ -205,116 +232,99 @@
     "    :param end_pos: \n",
     "    :return: \n",
     "    \"\"\"\n",
-    "    left_boundary = max(0, start_pos - 1500)\n",
-    "    right_boundary = min(len(string), end_pos + 1500)\n",
+    "    left_boundary = max(0, start_pos - 1000)\n",
+    "    right_boundary = min(len(string), end_pos + 1000)\n",
     "\n",
     "    context_string = string[left_boundary:right_boundary]\n",
     "    \n",
     "    return context_string"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.018478Z",
-     "start_time": "2024-03-07T06:04:10.014777Z"
-    }
-   },
-   "id": "2228d892feca9b9",
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "6e5e29334381f535",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "max_error = 20039"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.021907Z",
-     "start_time": "2024-03-07T06:04:10.019481Z"
-    }
-   },
-   "id": "6e5e29334381f535",
-   "execution_count": 7
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "8cdf1b87b9b02e8b",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "res_distances = []"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.025737Z",
-     "start_time": "2024-03-07T06:04:10.022915Z"
-    }
-   },
-   "id": "8cdf1b87b9b02e8b",
-   "execution_count": 8
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "ee92d1af46421156",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "with open(\"../data/wiktor_distances.pkl\", 'rb') as f:\n",
     "    res_distances = pickle.load(f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.030673Z",
-     "start_time": "2024-03-07T06:04:10.026998Z"
-    }
-   },
-   "id": "ee92d1af46421156",
-   "execution_count": 9
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "40a2265738dd35b7",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-07T06:04:10.035427Z",
-     "start_time": "2024-03-07T06:04:10.032977Z"
-    }
-   },
-   "id": "40a2265738dd35b7",
-   "execution_count": 10
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "2920dc0cd1692de2",
+   "metadata": {
+    "is_executing": true,
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coordinates not found for Pangi\n",
-      "Coordinates not found for Pangi\n",
-      "Coordinates not found for Pangi\n",
-      "Coordinates not found for Pangi\n",
-      "Coordinates not found for Pangi\n",
-      "Coordinates not found for Pangal\n",
-      "Coordinates not found for Pangi\n",
-      "Coordinates not found for San Manuel\n",
-      "Coordinates not found for Campo, Ticino\n",
-      "Coordinates not found for Campo, Ticino\n",
-      "Coordinates not found for Campo, Ticino\n",
-      "Coordinates not found for Campo, Ticino\n",
-      "Coordinates not found for Campo, Ticino\n",
-      "\t4100 iterations completed, saving to pkl.\n",
-      "Coordinates not found for Fortuna\n",
-      "Coordinates not found for La Fortuna\n",
-      "Coordinates not found for La Fortuna\n",
-      "\t4200 iterations completed, saving to pkl.\n",
-      "Coordinates not found for Waipa District\n"
+      "Coordinates not found for Ogden (name)\n",
+      "Coordinates not found for Bombon\n",
+      "Coordinates not found for Bombon\n",
+      "Coordinates not found for Bombon\n",
+      "Coordinates not found for Bombon\n"
      ]
     }
    ],
@@ -342,6 +352,7 @@
     "            )\n",
     "        except Exception as e:\n",
     "            print(f\"Input text too long, shortening it.\")\n",
+    "            # TODO should instead split into chunks\n",
     "            modified_text = shorten_sentences(modified_text, start_index, end_index+14)\n",
     "            sentences = [modified_text]\n",
     "            res = model.sample(\n",
@@ -371,50 +382,73 @@
     "                pickle.dump(res_distances, f)\n",
     "\n",
     "        # print(\"\\t\" + str(dist))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2024-03-07T06:04:10.036491Z"
-    }
-   },
-   "id": "2920dc0cd1692de2",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "f6375bfe-7c5b-4d35-8d07-ff02f2c5dc83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25242"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(res_distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2c92bdbfc6222daa",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-06T08:48:21.220609Z",
+     "start_time": "2024-03-06T08:48:21.205046Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "ename": "NameError",
      "evalue": "name 'res_distances' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[2], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpickle\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../data/wiktor_distances.pkl\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mwb\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m----> 4\u001B[0m     pickle\u001B[38;5;241m.\u001B[39mdump(\u001B[43mres_distances\u001B[49m, f)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'res_distances' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/wiktor_distances.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 4\u001b[0m     pickle\u001b[38;5;241m.\u001b[39mdump(\u001b[43mres_distances\u001b[49m, f)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'res_distances' is not defined"
      ]
     }
    ],
    "source": [
-    "import pickle\n",
-    "\n",
-    "with open(\"../data/wiktor_distances.pkl\", 'wb') as f:\n",
-    "    pickle.dump(res_distances, f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-06T08:48:21.220609Z",
-     "start_time": "2024-03-06T08:48:21.205046Z"
-    }
-   },
-   "id": "2c92bdbfc6222daa",
-   "execution_count": 2
+    "# import pickle\n",
+    "# \n",
+    "# with open(\"../data/wiktor_distances.pkl\", 'wb') as f:\n",
+    "#     pickle.dump(res_distances, f)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "ac51124701e58ede",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "def compute_accuracy_at_161km(distances):\n",
@@ -424,14 +458,18 @@
     "    count_within_threshold = sum(1 for distance in distances if distance <= 161)\n",
     "    accuracy = count_within_threshold / len(distances)\n",
     "    return accuracy"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ac51124701e58ede"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "f95c8ac154ba9db",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "def compute_mean_error(distances):\n",
@@ -441,14 +479,18 @@
     "    mean_error = sum(distances) / len(distances)\n",
     "\n",
     "    return mean_error"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f95c8ac154ba9db"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "5a14df9ba4f5d386",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from numpy import trapz\n",
@@ -466,63 +508,112 @@
     "    # Compute the area using the composite trapezoidal rule.\n",
     "    area = trapz(y) / len(distances)\n",
     "    return area"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5a14df9ba4f5d386"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "execution_count": 31,
+   "id": "aaf3e88f5c090451",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8765549481023691"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "compute_accuracy_at_161km(res_distances)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "aaf3e88f5c090451"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "execution_count": 32,
+   "id": "821ffe0273003f72",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1651.804228629602"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "compute_mean_error(res_distances)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "821ffe0273003f72"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "execution_count": 33,
+   "id": "1d5db683b3af7e53",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11798083057401694"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "compute_auc(res_distances)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1d5db683b3af7e53"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39616493-8246-4b67-8759-df2517a55797",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
