start reproducing ouchi

--- a/examples_mgenre/examples.ipynb
+++ b/examples_mgenre/examples.ipynb
@@ -32,8 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T06:38:14.817214Z",
+     "start_time": "2024-03-11T06:38:14.746659Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# OPTIONAL:\n",
@@ -43,8 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2024-03-11T06:38:16.662574Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -72,17 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# for pytorch/fairseq\n",
-    "from genre.fairseq_model import mGENRE\n",
-    "model = mGENRE.from_pretrained(\"../models/fairseq_multilingual_entity_disambiguation\").eval()\n",
+    "# from genre.fairseq_model import mGENRE\n",
+    "# model = mGENRE.from_pretrained(\"../models/fairseq_multilingual_entity_disambiguation\").eval()\n",
     "\n",
     "# for huggingface/transformers\n",
-    "# from genre.hf_model import mGENRE\n",
-    "# model = mGENRE.from_pretrained(\"../models/hf_multilingual_entity_disambiguation\").eval()"
+    "from genre.hf_model import mGENRE\n",
+    "model = mGENRE.from_pretrained(\"../models/hf_multilingual_entity_disambiguation\").eval()"
    ]
   },
   {
